--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
-node_modules
+# dependencies
+**/node_modules
+
+# production
+/dist
+/.vscode
+
+# misc
+.DS_Store
+npm-debug.log*
+yarn-error.log
+
+/coverage
+.idea
+yarn.lock
+*bak
+.vscode
+
+# visual studio code
+.history
+*.log
+
+functions/mock
+.temp/**
+
+# screenshot
+screenshot
+.firebase
