--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --open --config webpack.dev.js"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "test-promise": "promises-aplus-tests src/promise/MyPromiseFinal"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +15,18 @@
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.3.2",
+    "promises-aplus-tests": "^2.1.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "@types/react": "^17.0.20",
+    "axios": "^0.21.4",
+    "react": "^17.0.2",
+    "systeminformation": "^5.9.3",
+    "vue": "^3.2.16"
   }
 }
